--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -7,62 +7,36 @@ on:
     branches: [ "main", "develop" ]
   workflow_dispatch:
 
+# 최소 권한
 permissions:
   contents: read
 
+# 같은 브랜치 중복 실행 시 이전 실행 취소
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
   build-test:
+    # 레포에 Gradle 빌드 파일이 없으면 아예 실행 안 함(불필요한 실패 방지)
+    if: ${{ hashFiles('**/build.gradle*', '**/settings.gradle*') != '' }}
     runs-on: ubuntu-latest
     timeout-minutes: 20
 
     steps:
-      # 1) 코드 체크아웃 (PR일 때도 head 브랜치를 확실히 체크아웃)
+      # 1) 코드 체크아웃
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          ref: ${{ github.head_ref || github.ref }}
-          fetch-depth: 0
 
-      # 2) JDK 17 설치
+      # 2) JDK 17 설치(Temurin)
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
 
-      # 3) Gradle 프로젝트 루트 자동 탐지 (settings.gradle/build.gradle을 찾아서 사용)
-      - name: Detect Gradle project dir
-        id: detect
-        shell: bash
-        run: |
-          set -euo pipefail
-          echo "HEAD ref: ${GITHUB_HEAD_REF:-}  REF: $GITHUB_REF  SHA: $GITHUB_SHA"
-          echo "---- repo tree (top) ----"; ls -la
-          # settings.* 우선, 없으면 build.* 탐색
-          DIR=""
-          for pattern in "settings.gradle" "settings.gradle.kts" "build.gradle" "build.gradle.kts"; do
-            hit="$(find . -maxdepth 6 -type f -name "$pattern" | head -n 1 || true)"
-            if [ -n "$hit" ]; then
-              DIR="$(dirname "$hit")"
-              break
-            fi
-          done
-          if [ -z "$DIR" ]; then
-            echo "No Gradle build files found anywhere under repo."
-            exit 1
-          fi
-          DIR="${DIR#./}"
-          echo "dir=$DIR" >> "$GITHUB_OUTPUT"
-          echo "Detected Gradle project dir: $DIR"
-          echo "---- contents of detected dir ----"; ls -la "$DIR"
-
-      # 4) Secret에서 application.yml 생성 (탐지 디렉터리 기준)
+      # 3) Secret로 application.yml 생성(멀티라인 안전)
       - name: Make application.yml from secret
-        working-directory: ${{ steps.detect.outputs.dir }}
         shell: bash
         run: |
           mkdir -p ./src/main/resources
@@ -71,25 +45,32 @@ jobs:
           EOF
           sed -i 's/\r$//' ./src/main/resources/application.yml
 
-      # 5) Gradle 빌드/테스트 실행
-      #    - 래퍼 인식이 안 되더라도 실행되게 gradle-version 명시
+      # 4) Gradle 액션으로 빌드/테스트
+      #    - 레포의 Gradle Wrapper를 자동 감지하여 실행
+      #    - 캐시(래퍼/디스트리뷰션/의존성) 자동 관리
       - name: Build with Gradle
         uses: gradle/gradle-build-action@v3
         with:
-          gradle-version: 8.10.2
-          build-root-directory: ${{ steps.detect.outputs.dir }}
           arguments: clean build --no-daemon
 
-      # 6) 테스트 리포트 업로드 (항상)
+      # 5) 테스트 리포트 업로드(항상)
       - name: Upload Test Reports
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: junit-reports
           path: |
-            ${{ steps.detect.outputs.dir }}/**/build/test-results/test
-            ${{ steps.detect.outputs.dir }}/**/build/reports/tests/test
-          if-no-files-found: warn
+            **/build/test-results/test
+            **/build/reports/tests/test
 
-
-
+      # 6) 실패 시 간단 요약 출력
+      - name: Print failed tests (if any)
+        if: failure()
+        shell: bash
+        run: |
+          echo "---- Failed Test Classes (if any) ----"
+          if ls **/build/test-results/test/*.xml >/dev/null 2>&1; then
+            grep -Hn "failure message=" -R **/build/test-results/test/*.xml || true
+          else
+            echo "No test result XML files found."
+          fi
